--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -75,6 +75,17 @@ windowrule = rounding 10, xwayland:1, title:win[0-9]+
 workspace = w[tv1]s[false], gapsout:$singleWindowGapsOut
 workspace = f[1]s[false], gapsout:$singleWindowGapsOut
 
+workspace = 1, monitor:eDP-1
+workspace = 2, monitor:eDP-1
+workspace = 3, monitor:eDP-1
+workspace = 4, monitor:eDP-1
+workspace = 5, monitor:eDP-1
+workspace = 6, monitor:DP-1
+workspace = 7, monitor:DP-1
+workspace = 8, monitor:DP-1
+workspace = 9, monitor:DP-1
+workspace = 10, monitor:DP-1
+
 # ######## Layer rules ########
 layerrule = animation fade, hyprpicker  # Colour picker out animation
 layerrule = animation fade, logout_dialog  # wlogout
