--- a/hypr/hyprland/input.conf
+++ b/hypr/hyprland/input.conf
@@ -1,5 +1,7 @@
 input {
-    kb_layout = us
+    kb_layout = br
+    kb_variant = thinkpad
+    follow_mouse = 1
     numlock_by_default = false
     repeat_delay = 250
     repeat_rate = 35
