--- a/hypr/variables.conf
+++ b/hypr/variables.conf
@@ -1,9 +1,9 @@
 # ### Hyprland ###
 # Apps
-$terminal = foot
+$terminal = kitty
 $browser = zen-browser
 $editor = codium
-$fileExplorer = thunar
+$fileExplorer = nautilus
 
 # Touchpad
 $touchpadDisableTyping = true
@@ -34,7 +34,7 @@ $windowGapsOut = 40
 $singleWindowGapsOut = 20
 
 # Window styling
-$windowOpacity = 0.95
+$windowOpacity = 1
 $windowRounding = 10
 
 $windowBorderSize = 3
