adjust master layout

--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,5 +1,5 @@
 general {
-    layout = dwindle
+    layout = master
 
     allow_tearing = false  # Allows `immediate` window rule to work
 
@@ -12,8 +12,6 @@ general {
     col.inactive_border = $inactiveWindowBorderColour
 }
 
-dwindle {
-	preserve_split = true
-	smart_split = false
-	smart_resizing = true
+master {
+	mfact = 0.5
 }
