adapt to my needs

--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -18,6 +18,9 @@ windowrule = float, class:imv
 windowrule = float, class:system-config-printer
 windowrule = float, class:org\.quickshell
 
+windowrule = workspace special:ignore silent, title:.*está compartiendo tu pantalla\.
+
+
 # Float, resize and center
 windowrule = float, class:foot, title:nmtui
 windowrule = size 60% 70%, class:foot, title:nmtui
@@ -39,7 +42,13 @@ windowrule = workspace special:music, initialTitle:Spotify( Free)?  # Spotify wa
 windowrule = workspace special:communication, class:discord|equibop|vesktop|whatsapp
 windowrule = workspace special:todo, class:Todoist
 
+windowrule = workspace 1, initialTitle:Slack
+windowrule = workspace 2, class:chrome-kjbdgfilnfhdoflbpgamdcdgpehopbep-Profile_1
+windowrule = workspace 3, initialTitle:Gmail
+
 # Dialogs
+windowrule = float, class:copyq
+windowrule = float, title:Select what to share
 windowrule = float, title:(Select|Open)( a)? (File|Folder)(s)?
 windowrule = float, title:File (Operation|Upload)( Progress)?
 windowrule = float, title:.* Properties
