--- a/hypr/hyprland/execs.conf
+++ b/hypr/hyprland/execs.conf
@@ -3,8 +3,8 @@ exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Clipboard history
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
+# exec-once = wl-paste --type text --watch cliphist store
+# exec-once = wl-paste --type image --watch cliphist store
 
 # Auto delete trash 30 days old
 exec-once = trash-empty 30
@@ -19,10 +19,10 @@ exec-once = /usr/lib/geoclue-2.0/demos/agent
 exec-once = sleep 1 && gammastep
 
 # Forward bluetooth media commands to MPRIS
-exec-once = mpris-proxy
+# exec-once = mpris-proxy
 
 # Resize and move windows based on matches (e.g. pip)
 exec-once = caelestia resizer -d
 
 # Start shell
-exec-once = caelestia shell -d
+exec-once = caelestia shell -d && caelestia wallpaper -r ~/wallpapers-pc && hyprctl hyprsunset temperature 4000
