--- a/hypr/hyprland/input.conf
+++ b/hypr/hyprland/input.conf
@@ -9,7 +9,7 @@ input {
     focus_on_close = 1
 
     touchpad {
-        natural_scroll = true
+        natural_scroll = false
         disable_while_typing = $touchpadDisableTyping
         scroll_factor = $touchpadScrollFactor
     }
