config and load hyprexpo

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,4 +20,5 @@ source = $hl/group.conf
 source = $hl/execs.conf
 source = $hl/rules.conf
 source = $hl/gestures.conf
+source = $hl/plugins.conf
 source = $hl/keybinds.conf
