--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -1,6 +1,10 @@
 exec = hyprctl dispatch submap global
 submap = global
 
+# Plugins
+
+bind = SUPER, g, hyprexpo:expo, toggle
+
 # ## Shell keybinds
 # Launcher
 bind = Super, Space, global, caelestia:launcher
