--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -4,58 +4,18 @@ windowrule = opacity $windowOpacity override, fullscreen:0
 windowrule = opaque, class:foot|equibop|org\.quickshell|imv|swappy  # They use native transparency or we want them opaque
 windowrule = center 1, floating:1, xwayland:0  # Center all floating windows (not xwayland cause popups)
 
-# Float
-windowrule = float, class:guifetch  # FlafyDev/guifetch
-windowrule = float, class:yad
-windowrule = float, class:zenity
-windowrule = float, class:wev
-windowrule = float, class:org\.gnome\.FileRoller
-windowrule = float, class:file-roller  # WHY IS THERE TWOOOOOOOOOOOOOOOO
-windowrule = float, class:blueman-manager
-windowrule = float, class:com\.github\.GradienceTeam\.Gradience
-windowrule = float, class:feh
-windowrule = float, class:imv
-windowrule = float, class:system-config-printer
-windowrule = float, class:org\.quickshell
-
 windowrule = workspace special:ignore silent, title:.*está compartiendo tu pantalla\.
 
-
-# Float, resize and center
-windowrule = float, class:foot, title:nmtui
-windowrule = size 60% 70%, class:foot, title:nmtui
-windowrule = center 1, class:foot, title:nmtui
-windowrule = float, class:org\.gnome\.Settings
-windowrule = size 70% 80%, class:org\.gnome\.Settings
-windowrule = center 1, class:org\.gnome\.Settings
-windowrule = float, class:org\.pulseaudio\.pavucontrol|yad-icon-browser
-windowrule = size 60% 70%, class:org\.pulseaudio\.pavucontrol|yad-icon-browser
-windowrule = center 1, class:org\.pulseaudio\.pavucontrol|yad-icon-browser
-windowrule = float, class:nwg-look
-windowrule = size 50% 60%, class:nwg-look
-windowrule = center 1, class:nwg-look
-
 # Special workspaces
-windowrule = workspace special:sysmon, class:btop
-windowrule = workspace special:music, class:feishin|Spotify|Supersonic|Cider
-windowrule = workspace special:music, initialTitle:Spotify( Free)?  # Spotify wayland, it has no class for some reason
-windowrule = workspace special:communication, class:discord|equibop|vesktop|whatsapp
-windowrule = workspace special:todo, class:Todoist
 
 windowrule = workspace 1, initialTitle:Slack
 windowrule = workspace 2, class:chrome-kjbdgfilnfhdoflbpgamdcdgpehopbep-Profile_1
 windowrule = workspace 3, initialTitle:Gmail
 
-# Dialogs
+# Float
 windowrule = float, class:copyq
-windowrule = float, title:Select what to share
-windowrule = float, title:(Select|Open)( a)? (File|Folder)(s)?
-windowrule = float, title:File (Operation|Upload)( Progress)?
-windowrule = float, title:.* Properties
-windowrule = float, title:Export Image as PNG
-windowrule = float, title:GIMP Crash Debug
-windowrule = float, title:Save As
-windowrule = float, title:Library
+windowrule = size 50% 50%, class:copyq
+windowrule = center 1, class:copyq
 
 # Picture in picture (resize and move done via script)
 windowrule = move 100%-w-2% 100%-w-3%, title:Picture(-| )in(-| )[Pp]icture  # Initial move so window doesn't shoot across the screen from the center
@@ -68,12 +28,6 @@ windowrule = rounding 10, title:, class:steam
 windowrule = float, title:Friends List, class:steam
 windowrule = immediate, class:steam_app_[0-9]+  # Allow tearing for steam games
 windowrule = idleinhibit always, class:steam_app_[0-9]+  # Always idle inhibit when playing a steam game
-
-# ATLauncher console
-windowrule = float, class:com-atlauncher-App, title:ATLauncher Console
-
-# Autodesk Fusion 360
-windowrule = noblur, title:Fusion360|(Marking Menu), class:fusion360\.exe
 
 # Ugh xwayland popups
 windowrule = nodim, xwayland:1, title:win[0-9]+
