remove unused binds and add a lot of new keybinds

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -2,7 +2,6 @@ exec = hyprctl dispatch submap global
 submap = global
 
 # Plugins
-
 bind = SUPER, g, hyprexpo:expo, toggle
 
 # ## Shell keybinds
@@ -18,70 +17,29 @@ bindin = Super, mouse:277, global, caelestia:launcherInterrupt
 bindin = Super, mouse_up, global, caelestia:launcherInterrupt
 bindin = Super, mouse_down, global, caelestia:launcherInterrupt
 
-# Misc
-# bind = Ctrl+Alt, Delete, global, caelestia:session
-# bindl = Ctrl+Alt, C, global, caelestia:clearNotifs
-# bind = Super, K, global, caelestia:showall
-# bind = Super, L, global, caelestia:lock
-
-# Restore lock
-# bindl = Super+Alt, L, exec, caelestia shell -d
-# bindl = Super+Alt, L, global, caelestia:lock
-
 # Brightness
 bindl = , XF86MonBrightnessUp, global, caelestia:brightnessUp
 bindl = , XF86MonBrightnessDown, global, caelestia:brightnessDown
 
 # Media
-# bindl = Ctrl+Super, Space, global, caelestia:mediaToggle
 bindl = , XF86AudioPlay, global, caelestia:mediaToggle
 bindl = , XF86AudioPause, global, caelestia:mediaToggle
-# bindl = Ctrl+Super, Equal, global, caelestia:mediaNext
 bindl = , XF86AudioNext, global, caelestia:mediaNext
-# bindl = Ctrl+Super, Minus, global, caelestia:mediaPrev
 bindl = , XF86AudioPrev, global, caelestia:mediaPrev
 bindl = , XF86AudioStop, global, caelestia:mediaStop
 
-# Kill/restart
-# bindr = Ctrl+Super+Shift, R, exec, qs -c caelestia kill
-# bindr = Ctrl+Super+Alt, R, exec, qs -c caelestia kill; caelestia shell -d
-
 # Go to workspace #
-# $wsaction = $hypr/scripts/wsaction.fish
-# bind = Super, 1, exec, $wsaction workspace 1
-# bind = Super, 2, exec, $wsaction workspace 2
-# bind = Super, 3, exec, $wsaction workspace 3
-# bind = Super, 4, exec, $wsaction workspace 4
-# bind = Super, 5, exec, $wsaction workspace 5
-# bind = Super, 6, exec, $wsaction workspace 6
-# bind = Super, 7, exec, $wsaction workspace 7
-# bind = Super, 8, exec, $wsaction workspace 8
-# bind = Super, 9, exec, $wsaction workspace 9
-# bind = Super, 0, exec, $wsaction workspace 10
 
-bind = Super, 1,  workspace,  1
-bind = Super, 2,  workspace ,2
-bind = Super, 3,  workspace ,3
-bind = Super, 4,  workspace ,4
-bind = Super, 5,  workspace ,5
-bind = Super, 6,  workspace ,6
-bind = Super, 7,  workspace ,7
-bind = Super, 8,  workspace ,8
-bind = Super, 9,  workspace ,9
-bind = Super, 0,  workspace ,10
-
-# Go to workspace group #
-
-# bind = Ctrl+Super, 1, exec, $wsaction -g workspace 1
-# bind = Ctrl+Super, 2, exec, $wsaction -g workspace 2
-# bind = Ctrl+Super, 3, exec, $wsaction -g workspace 3
-# bind = Ctrl+Super, 4, exec, $wsaction -g workspace 4
-# bind = Ctrl+Super, 5, exec, $wsaction -g workspace 5
-# bind = Ctrl+Super, 6, exec, $wsaction -g workspace 6
-# bind = Ctrl+Super, 7, exec, $wsaction -g workspace 7
-# bind = Ctrl+Super, 8, exec, $wsaction -g workspace 8
-# bind = Ctrl+Super, 9, exec, $wsaction -g workspace 9
-# bind = Ctrl+Super, 0, exec, $wsaction -g workspace 10
+bind = Super, 1,  workspace, 1
+bind = Super, 2,  workspace, 2
+bind = Super, 3,  workspace, 3
+bind = Super, 4,  workspace, 4
+bind = Super, 5,  workspace, 5
+bind = Super, 6,  workspace, 6
+bind = Super, 7,  workspace, 7
+bind = Super, 8,  workspace, 8
+bind = Super, 9,  workspace, 9
+bind = Super, 0,  workspace, 10
 
 # Go to workspace -1/+1
 
@@ -89,10 +47,6 @@ bind = Super, mouse_down, workspace, -1
 bind = Super, mouse_up, workspace, +1
 binde = Super, Page_Up, workspace, -1
 binde = Super, Page_Down, workspace, +1
-
-# Go to workspace group -1/+1
-# bind = Ctrl+Super, mouse_down, workspace, -10
-# bind = Ctrl+Super, mouse_up, workspace, +10
 
 # Toggle special workspace
 bind = Super, S, exec, caelestia toggle specialws
@@ -109,39 +63,29 @@ bind = Super+Shift, 8, movetoworkspace ,8
 bind = Super+Shift, 9, movetoworkspace ,9
 bind = Super+Shift, 0, movetoworkspace ,10
 
-# # Move window to workspace group #
-# bind = Ctrl+Super+Alt, 1, exec, $wsaction -g movetoworkspace 1
-# bind = Ctrl+Super+Alt, 2, exec, $wsaction -g movetoworkspace 2
-# bind = Ctrl+Super+Alt, 3, exec, $wsaction -g movetoworkspace 3
-# bind = Ctrl+Super+Alt, 4, exec, $wsaction -g movetoworkspace 4
-# bind = Ctrl+Super+Alt, 5, exec, $wsaction -g movetoworkspace 5
-# bind = Ctrl+Super+Alt, 6, exec, $wsaction -g movetoworkspace 6
-# bind = Ctrl+Super+Alt, 7, exec, $wsaction -g movetoworkspace 7
-# bind = Ctrl+Super+Alt, 8, exec, $wsaction -g movetoworkspace 8
-# bind = Ctrl+Super+Alt, 9, exec, $wsaction -g movetoworkspace 9
-# bind = Ctrl+Super+Alt, 0, exec, $wsaction -g movetoworkspace 10
+# Groups
+bind = Ctrl+Super, g, togglegroup
+
+bind = Ctrl+Super, Page_Up, changegroupactive, b
+bind = Ctrl+Super, Page_Down, changegroupactive, f
+
+bind = Ctrl+Super+Shift, Page_Up, movegroupwindow, b
+bind = Ctrl+Super+Shift, Page_Down, movegroupwindow, f
+
+bind = Ctrl+Super+Shift, h, movewindoworgroup, l
+bind = Ctrl+Super+Shift, left, movewindoworgroup, l
+bind = Ctrl+Super+Shift, l, movewindoworgroup, r
+bind = Ctrl+Super+Shift, right, movewindoworgroup, r
 
 # Move window to workspace -1/+1
 binde = Super+Shift, Page_Up, movetoworkspace, -1
 binde = Super+Shift, Page_Down, movetoworkspace, +1
 bind = Super+Shift, mouse_down, movetoworkspace, -1
 bind = Super+Shift, mouse_up, movetoworkspace, +1
-binde = Ctrl+Super+Shift, right, movetoworkspace, +1
-binde = Ctrl+Super+Shift, left, movetoworkspace, -1
 
-# Move window to/from special workspace
-bind = Ctrl+Super+Shift, up, movetoworkspace, special:special
-bind = Ctrl+Super+Shift, down, movetoworkspace, e+0
-bind = Super+Alt, S, movetoworkspace, special:special
-
-# Window groups
+# Cycling
 binde = Alt, Tab, cyclenext, activewindow
 binde = Shift+Alt, Tab, cyclenext, prev, activewindow
-binde = Ctrl+Alt, Tab, changegroupactive, f
-binde = Ctrl+Shift+Alt, Tab, changegroupactive, b
-bind = Super, Comma, togglegroup
-bind = Super, U, moveoutofgroup
-bind = Super+Shift, Comma, lockactivegroup, toggle
 
 # Window actions
 bind = Super, h, movefocus, l
@@ -173,58 +117,27 @@ bindm = Super, Z, movewindow
 bindm = Super, mouse:273, resizewindow
 bindm = Super, X, resizewindow
 
-# bind = Ctrl+Super, Backslash, centerwindow, 1
-# bind = Ctrl+Super+Alt, Backslash, resizeactive, exact 55% 70%
-# bind = Ctrl+Super+Alt, Backslash, centerwindow, 1
-# bind = Super+Alt, Backslash, exec, caelestia resizer pip  # Move window to picture-in-picture mode
-# bind = Super, P, pin
 bind= Super, F, fullscreen, 0
-# bind = Super+Alt, F, fullscreen, 1  # Fullscreen with borders
 bindn = Super+Alt, F, togglefloating,
 bind = Super, Q, killactive,
-
-# Special workspace toggles
-# bind = Ctrl+Shift, Escape, exec, caelestia toggle sysmon
-# bind = Super, M, exec, caelestia toggle music
-# bind = Super, D, exec, caelestia toggle communication
-# bind = Super, R, exec, caelestia toggle test
 
 # Apps
 bind = Super, Return, exec, $terminal
 bind = Super+Shift, Return, exec, $terminal --hold sh -c yazi
-# bind = Super, W, exec, $browser
-# bind = Super, C, exec, $editor
-# bind = Super, G, exec, github-desktop
-# bind = Super, E, exec, $fileExplorer
-# bind = Super+Alt, E, exec, nemo
-# bind = Ctrl+Alt, Escape, exec, qps
-# bind = Ctrl+Alt, V, exec, pavucontrol
 
 # Utilities
-bindl = , Print, exec, hyprshot -m region
-# bind = Super+Shift, S, global, caelestia:screenshotFreeze  # Capture region (freeze)
-# bind = Super+Shift+Alt, S, global, caelestia:screenshot  # Capture region
-# bind = Super+Alt, R, exec, caelestia record -s  # Record screen with sound
-# bind = Ctrl+Alt, R, exec, caelestia record  # Record screen
-# bind = Super+Shift+Alt, R, exec, caelestia record -r  # Record region
-# bind = Super+Shift, C, exec, hyprpicker -a  # Colour picker
+bindl = , Print, exec, hyprshot -zm region
+bindl = Shift, Print, exec, hyprshot -zm output
 
 # Volume
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindle = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ $volumeStep%+
 bindle = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume @DEFAULT_AUDIO_SINK@ $volumeStep%-
 
-# Sleep
-# bind = Super+Shift, L, exec, systemctl suspend-then-hibernate
-
 # Clipboard and emoji picker
-bind = Super, V, exec, copyq show
-bind = Super, Period, exec, pkill fuzzel || caelestia emoji -p
-# bindl = Ctrl+Shift+Alt, V, exec, sleep 0.5s && ydotool type -d 1 "$(cliphist list | head -1 | cliphist decode)"  # Alternate paste
-
-# Testing
-# bindl = Super+Alt, f12, exec, notify-send -u low -i dialog-information-symbolic 'Test notification' "Here's a really long message to test truncation and wrapping\nYou can middle click or flick this notification to dismiss it!" -a 'Shell' -A "Test1=I got it!" -A "Test2=Another action"
-
+bind = Super, V, exec, cliphist-fuzzel-img
+bind = Super+Shift, V, exec, eza -1 ~/dot_files/snippets | fuzzel --dmenu | xargs -I {} echo "/home/joaoeduardo/dot_files/snippets/{}" | xargs cat | wl-copy
+bind = Super, Period, exec, caelestia emoji -p
 
 # Runner submap
 bind = Super, R, submap, runner
@@ -247,6 +160,7 @@ submap = exit, global
 
 bind = , s, exec, systemctl suspend
 bind = , p, exec, systemctl poweroff
+bind = , r, exec, systemctl reboot
 
 bind = , catchall, submap, global
 
