fix intellij popups

--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -13,9 +13,8 @@ windowrule = workspace 2, class:chrome-kjbdgfilnfhdoflbpgamdcdgpehopbep-Profile_
 windowrule = workspace 3, initialTitle:Gmail
 
 # Float
-windowrule = float, class:copyq
-windowrule = size 50% 50%, class:copyq
-windowrule = center 1, class:copyq
+windowrule = size 50% 50%, class:jetbrains-idea, floating:1
+windowrule = center 1, class:jetbrains-idea, floating:1
 
 # Picture in picture (resize and move done via script)
 windowrule = move 100%-w-2% 100%-w-3%, title:Picture(-| )in(-| )[Pp]icture  # Initial move so window doesn't shoot across the screen from the center
