add group rules for work tools

--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -6,11 +6,13 @@ windowrule = center 1, floating:1, xwayland:0  # Center all floating windows (no
 
 windowrule = workspace special:ignore silent, title:.*está compartiendo tu pantalla\.
 
-# Special workspaces
+# Groups
+windowrule = tag +work, initialTitle:Slack
+windowrule = tag +work, class:chrome-kjbdgfilnfhdoflbpgamdcdgpehopbep-Profile_1
+windowrule = tag +work, initialTitle:Gmail
 
-windowrule = workspace 1, initialTitle:Slack
-windowrule = workspace 2, class:chrome-kjbdgfilnfhdoflbpgamdcdgpehopbep-Profile_1
-windowrule = workspace 3, initialTitle:Gmail
+windowrule = workspace 1, tag:work
+windowrule = group, tag:work
 
 # Float
 windowrule = size 50% 50%, class:jetbrains-idea, floating:1
