use scrolling layout

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -45,8 +45,8 @@ bind = Super, 0,  workspace, 10
 
 bind = Super, mouse_down, workspace, -1
 bind = Super, mouse_up, workspace, +1
-binde = Super, Page_Up, workspace, -1
-binde = Super, Page_Down, workspace, +1
+bind = Super, Page_Up, workspace, -1
+bind = Super, Page_Down, workspace, +1
 
 # Toggle special workspace
 bind = Super, S, exec, caelestia toggle specialws
@@ -78,8 +78,8 @@ bind = Ctrl+Super+Shift, l, movewindoworgroup, r
 bind = Ctrl+Super+Shift, right, movewindoworgroup, r
 
 # Move window to workspace -1/+1
-binde = Super+Shift, Page_Up, movetoworkspace, -1
-binde = Super+Shift, Page_Down, movetoworkspace, +1
+bind = Super+Shift, Page_Up, movetoworkspace, -1
+bind = Super+Shift, Page_Down, movetoworkspace, +1
 bind = Super+Shift, mouse_down, movetoworkspace, -1
 bind = Super+Shift, mouse_up, movetoworkspace, +1
 
@@ -88,15 +88,22 @@ binde = Alt, Tab, cyclenext, activewindow
 binde = Shift+Alt, Tab, cyclenext, prev, activewindow
 
 # Window actions
-bind = Super, h, movefocus, l
-bind = Super, l, movefocus, r
-bind = Super, k, movefocus, u
-bind = Super, j, movefocus, d
+bind = Super, h, layoutmsg, focus l
+bind = Super, l, layoutmsg, focus r
+bind = Super, k, layoutmsg, focus u
+bind = Super, j, layoutmsg, focus d
 
-bind = Super, left, movefocus, l
-bind = Super, right, movefocus, r
-bind = Super, up, movefocus, u
-bind = Super, down, movefocus, d
+bind = Super, left, layoutmsg, focus l
+bind = Super, right, layoutmsg, focus r
+bind = Super, up, layoutmsg, focus u
+bind = Super, down, layoutmsg, focus d
+
+bind = Super+Alt, left, focusmonitor, l
+bind = Super+Alt, right, focusmonitor, r
+#bind = Super, left, movefocus, l
+#bind = Super, right, movefocus, r
+#bind = Super, up, movefocus, u
+#bind = Super, down, movefocus, d
 
 bind = Super+Shift, left, movewindow, l
 bind = Super+Shift, right, movewindow, r
@@ -108,8 +115,10 @@ bind = Super+Shift, l, movewindow, r
 bind = Super+Shift, k, movewindow, u
 bind = Super+Shift, j, movewindow, d
 
-binde = Super, Minus, splitratio, -0.1
-binde = Super, Equal, splitratio, 0.1
+bind = Super, Minus, layoutmsg, colresize -conf
+bind = Super, Equal, layoutmsg, colresize +conf
+#binde = Super, Minus, splitratio, -0.1
+#binde = Super, Equal, splitratio, 0.1
 
 bindm = Super, mouse:272, movewindow
 bindm = Super, Z, movewindow
