--- a/hypr/hyprland/plugins.conf
+++ b/hypr/hyprland/plugins.conf
@@ -4,4 +4,10 @@ plugin {
         gap_size = 0
         skip_empty = true
     }
+
+    hyprscrolling {
+        fullscreen_on_one_column = true
+        column_width = 0.667
+        focus_fit_method = 1
+    }
 }
