--- a/hypr/hyprland/input.conf
+++ b/hypr/hyprland/input.conf
@@ -1,12 +1,11 @@
 input {
     kb_layout = br
     kb_variant = thinkpad
-    follow_mouse = 1
-    numlock_by_default = false
+
+    numlock_by_default = true
+
     repeat_delay = 250
     repeat_rate = 35
-
-    focus_on_close = 1
 
     touchpad {
         natural_scroll = false
@@ -17,9 +16,9 @@ input {
 
 binds {
     scroll_event_delay = 0
+    workspace_center_on = 1
 }
 
 cursor {
     hotspot_padding = 1
 }
-
