--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -6,17 +6,12 @@ windowrule = center 1, floating:1, xwayland:0  # Center all floating windows (no
 
 windowrule = workspace special:ignore silent, title:.*está compartiendo tu pantalla\.
 
-# Groups
-windowrule = tag +work, initialTitle:Slack
-windowrule = tag +work, class:chrome-kjbdgfilnfhdoflbpgamdcdgpehopbep-Profile_1
-windowrule = tag +work, initialTitle:Gmail
-
-windowrule = workspace 1, tag:work
-windowrule = group, tag:work
+windowrule = workspace 1, initialTitle:Slack
+windowrule = workspace 2, class:chrome-kjbdgfilnfhdoflbpgamdcdgpehopbep-Profile_1
+windowrule = workspace 3, initialTitle:Gmail
 
 # Float
-windowrule = size 50% 50%, class:jetbrains-idea, floating:1
-windowrule = center 1, class:jetbrains-idea, floating:1
+windowrule = center 1, focusonactivate 1, size 50% 50%, class:jetbrains-idea, floating:1
 
 # Picture in picture (resize and move done via script)
 windowrule = move 100%-w-2% 100%-w-3%, title:Picture(-| )in(-| )[Pp]icture  # Initial move so window doesn't shoot across the screen from the center
